Cart: Size align fixed.

--- a/app/assets/stylesheets/cart.css.scss
+++ b/app/assets/stylesheets/cart.css.scss
@@ -32,8 +32,8 @@ $screen-sm-min:              $screen-sm !default;
   color: #f75353;
 }
 
-.cart-modal .btn-group .btn.btn-warning {
-  margin-left: 5px;
+.cart-modal .btn-group {
+  margin-right: 5px;
 }
 
 .cart-modal span.size-price {
